# fabric-mod-hub

./: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
src-tauri/: .gitignore  .taurignore  Cargo.toml  dev.sqlite3  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sql/: foreign_key_constraints.sql  init.sql  modpacks.sql  settings.sql
src-tauri/sql/custom_files/: create.sql  delete.sql  get_from_filename.sql  get_from_modpack_version_id.sql
src-tauri/sql/mod_versions/: create.sql  from_modpack_version_id.sql  get_dependencies.sql  id_from_version_id.sql  join_all.sql  join_from_modpack_version_id.sql  join_one.sql
src-tauri/sql/modpack_mods/: create.sql  delete.sql  id_from_unique.sql
src-tauri/sql/modpack_versions/: create.sql  delete.sql  from_id.sql  get_by_modpack_id.sql  id_from_unique.sql  install.sql  join_all.sql  join_one.sql  load.sql  unload_all.sql  update.sql
src-tauri/sql/modpacks/: create.sql  delete.sql  get.sql  get_from_id.sql  get_from_slug.sql  id_from_slug.sql  update.sql
src-tauri/sql/mods/: create.sql  delete.sql  get_from_id.sql  get_from_modpack_id.sql  get_from_project_id.sql
src-tauri/sql/settings/: create.sql  get.sql  get_allow_snapshots.sql  get_allow_unstable.sql  get_minecraft_dir.sql  get_stable_only.sql  set_allow_snapshots.sql  set_allow_unstable.sql  set_minecraft_dir.sql
src-tauri/src/: commands.rs  database.rs  files.rs  main.rs  requests.rs
src-tauri/src/database/: errors.rs  joins.rs  models.rs
src-tauri/src/files/: custom_files.rs  fabric_loader.rs  launcher_profile.rs  (+2 more)
(+77 files in other folders)
