[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["macos-private-api", "shell-open", "window-close", "window-hide", "window-minimize", "window-show", "window-start-dragging"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
dotenv = "0.15.0"
derive-new = "0.5.9"
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
